psram/build/log/idf_py_stdout_output_763593
[1/13] Linking C static library esp-idf/espressif__esp_jpeg/libespressif__esp_jpeg.a
[2/13] Linking C static library esp-idf/espressif__esp_sccb_intf/libespressif__esp_sccb_intf.a
[3/13] Linking C static library esp-idf/espressif__esp32-camera/libespressif__esp32-camera.a
[4/13] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/web_srv_main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/web_srv_main.c.obj 
/home/srijit/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/srijit/esp/psram/build/config -I/home/srijit/esp/psram/main -I/home/srijit/esp/esp-idf/components/newlib/platform_include -I/home/srijit/esp/esp-idf/components/freertos/config/include -I/home/srijit/esp/esp-idf/components/freertos/config/include/freertos -I/home/srijit/esp/esp-idf/components/freertos/config/xtensa/include -I/home/srijit/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/srijit/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/srijit/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/srijit/esp/esp-idf/components/freertos/esp_additions/include -I/home/srijit/esp/esp-idf/components/esp_hw_support/include -I/home/srijit/esp/esp-idf/components/esp_hw_support/include/soc -I/home/srijit/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/srijit/esp/esp-idf/components/esp_hw_support/dma/include -I/home/srijit/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/srijit/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/srijit/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/srijit/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/srijit/esp/esp-idf/components/heap/include -I/home/srijit/esp/esp-idf/components/heap/tlsf -I/home/srijit/esp/esp-idf/components/log/include -I/home/srijit/esp/esp-idf/components/soc/include -I/home/srijit/esp/esp-idf/components/soc/esp32s3 -I/home/srijit/esp/esp-idf/components/soc/esp32s3/include -I/home/srijit/esp/esp-idf/components/soc/esp32s3/register -I/home/srijit/esp/esp-idf/components/hal/platform_port/include -I/home/srijit/esp/esp-idf/components/hal/esp32s3/include -I/home/srijit/esp/esp-idf/components/hal/include -I/home/srijit/esp/esp-idf/components/esp_rom/include -I/home/srijit/esp/esp-idf/components/esp_rom/esp32s3/include -I/home/srijit/esp/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -I/home/srijit/esp/esp-idf/components/esp_rom/esp32s3 -I/home/srijit/esp/esp-idf/components/esp_common/include -I/home/srijit/esp/esp-idf/components/esp_system/include -I/home/srijit/esp/esp-idf/components/esp_system/port/soc -I/home/srijit/esp/esp-idf/components/esp_system/port/include/private -I/home/srijit/esp/esp-idf/components/xtensa/esp32s3/include -I/home/srijit/esp/esp-idf/components/xtensa/include -I/home/srijit/esp/esp-idf/components/xtensa/deprecated_include -I/home/srijit/esp/esp-idf/components/esp_psram/include -I/home/srijit/esp/esp-idf/components/esp_partition/include -I/home/srijit/esp/esp-idf/components/spi_flash/include -I/home/srijit/esp/esp-idf/components/esp_timer/include -I/home/srijit/esp/psram/managed_components/espressif__esp32-camera/driver/include -I/home/srijit/esp/psram/managed_components/espressif__esp32-camera/conversions/include -I/home/srijit/esp/esp-idf/components/driver/deprecated -I/home/srijit/esp/esp-idf/components/driver/i2c/include -I/home/srijit/esp/esp-idf/components/driver/touch_sensor/include -I/home/srijit/esp/esp-idf/components/driver/twai/include -I/home/srijit/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/srijit/esp/esp-idf/components/esp_pm/include -I/home/srijit/esp/esp-idf/components/esp_ringbuf/include -I/home/srijit/esp/esp-idf/components/esp_driver_gpio/include -I/home/srijit/esp/esp-idf/components/esp_driver_pcnt/include -I/home/srijit/esp/esp-idf/components/esp_driver_gptimer/include -I/home/srijit/esp/esp-idf/components/esp_driver_spi/include -I/home/srijit/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/srijit/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/srijit/esp/esp-idf/components/esp_driver_i2s/include -I/home/srijit/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/srijit/esp/esp-idf/components/sdmmc/include -I/home/srijit/esp/esp-idf/components/esp_driver_sdspi/include -I/home/srijit/esp/esp-idf/components/esp_driver_sdio/include -I/home/srijit/esp/esp-idf/components/esp_driver_dac/include -I/home/srijit/esp/esp-idf/components/esp_driver_rmt/include -I/home/srijit/esp/esp-idf/components/esp_driver_tsens/include -I/home/srijit/esp/esp-idf/components/esp_driver_sdm/include -I/home/srijit/esp/esp-idf/components/esp_driver_i2c/include -I/home/srijit/esp/esp-idf/components/esp_driver_uart/include -I/home/srijit/esp/esp-idf/components/esp_driver_ledc/include -I/home/srijit/esp/esp-idf/components/esp_driver_parlio/include -I/home/srijit/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/srijit/esp/psram/managed_components/espressif__esp_jpeg/include -I/home/srijit/esp/psram/managed_components/espressif__esp_sccb_intf/include -I/home/srijit/esp/psram/managed_components/espressif__esp_sccb_intf/interface -I/home/srijit/esp/psram/managed_components/espressif__esp_sccb_intf/sccb_i2c/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -Og -fno-shrink-wrap -fmacro-prefix-map=/home/srijit/esp/psram=. -fmacro-prefix-map=/home/srijit/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/web_srv_main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/web_srv_main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/web_srv_main.c.obj -c /home/srijit/esp/psram/main/web_srv_main.c
In file included from /home/srijit/esp/psram/main/web_srv_main.c:10:
/home/srijit/esp/psram/main/web_srv_main.c: In function 'app_main':
/home/srijit/esp/psram/main/web_srv_main.c:23:41: error: implicit declaration of function 'esp_psram_get_size'; did you mean 'esp_flash_get_size'? [-Wimplicit-function-declaration]
   23 |     ESP_LOGI(TAG, "===> PSRAM Size=%d", esp_psram_get_size());
      |                                         ^~~~~~~~~~~~~~~~~~
/home/srijit/esp/esp-idf/components/log/include/esp_log.h:182:137: note: in definition of macro 'ESP_LOG_LEVEL'
  182 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/home/srijit/esp/esp-idf/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/home/srijit/esp/psram/main/web_srv_main.c:23:5: note: in expansion of macro 'ESP_LOGI'
   23 |     ESP_LOGI(TAG, "===> PSRAM Size=%d", esp_psram_get_size());
      |     ^~~~~~~~
[5/13] Performing build step for 'bootloader'
[1/1] cd /home/srijit/esp/psram/build/bootloader/esp-idf/esptool_py && /home/srijit/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/srijit/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/srijit/esp/psram/build/bootloader/bootloader.bin
Bootloader binary size 0x5210 bytes. 0x2df0 bytes (36%) free.
ninja: build stopped: subcommand failed.
